--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,9 @@ jobs:
       - name: Install dependencies 👨🏻‍💻
         run: yarn
 
+      - name: Generate Icon 📦
+        run: yarn logo:generate
+
       - name: Generate 🏗
         run: yarn build
 
